Fixed overflow + more
- fixed overflow
- added favicon
- added meta desc

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #e28b8e;
-    overflow-x: hidden;
 }
 
 button {
@@ -162,9 +161,9 @@ footer {
     background-color: #fac4bb;
     position: absolute;
     bottom: 0;
-    width: 100vw;
-    padding: 0.4rem;
-    opacity: 0.7;
+    width: 100%;
+    padding: 0.6rem 0;
+    opacity: 0.6;
 }
 
 @media (max-width: 980px) {
@@ -181,5 +180,6 @@ footer {
     footer {
         background-color: #dd5f7b;
         font-size: 0.8rem;
+        font-weight: 600;
     }
 }
